Created templates for routes and controllers
